manifests/argo/netpol-workflows-server.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: workflows-server
  namespace: argo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argo-workflows-server
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "2746"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            sensor-name: tofu-cloudflare
        - matchLabels:
            app.kubernetes.io/name: argo-workflows-workflow-controller
      toPorts:
        - ports:
            - port: "2746"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-dex-server
            io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "5556"
              protocol: TCP
            - port: "5557"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-server
            io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
